--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ before_install:
   - # start your web application and listen on `localhost`
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   ⋮
+  - pip install selenium
