--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,28 @@
-language: python
+language: java # set desired language
+
 dist: trusty
+
 addons:
-  chrome: stable
+  apt:
+    sources:
+      - google-chrome # if your project contains tests need to be run on chrome include these lines
+    packages:
+      - google-chrome-stable
+
+addons:
+   firefox: "38.0" # if your project contains tests need to be run on firefox include these lines
+
+
 before_install:
-  - # start your web application and listen on `localhost`
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  ⋮
-  - pip install selenium
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024" # running virtual display on desired port with desired settings
+  - sleep 3 
+
+before_script:
+  # Selenium server
+  - "wget http://selenium-release.storage.googleapis.com/2.45/selenium-server-standalone-2.45.0.jar" - # download selenium-server
+  - "wget %url_of_your_lib% # download your framework or framework dependencies (selenium libs, etc.)
+  - "java -jar selenium-server-standalone-2.45.0.jar > /dev/null 2>/dev/null &" # starting selenium-server
+  - sleep 20 # gives enough time to Selenium to start
+
+script:
+  # perform build and run commands here
