--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: java 
 dist: trusty
 addons:
-  apt:
-    sources:
-      - google-chrome 
-    packages:
-      - google-chrome-stable
+  chrome: stable
 before_install:
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024" 
-  - sleep 3 
-before_script:
-  # Selenium server
-  - "wget http://selenium-release.storage.googleapis.com/2.45/selenium-server-standalone-2.45.0.jar" - 
+  - # start your web application and listen on `localhost`
+  - "wget http://selenium-release.storage.googleapis.com/2.45/selenium-server-standalone-2.45.0.jar" - # download selenium-server
   - "wget %url_of_your_lib% # download your framework or framework dependencies (selenium libs, etc.)
-  - "java -jar selenium-server-standalone-2.45.0.jar > /dev/null 2>/dev/null &" 
-  - sleep 20 
+  - "java -jar selenium-server-standalone-2.45.0.jar > /dev/null 2>/dev/null &" # starting selenium-server
+  - sleep 20 # gives enough time to Selenium to start
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  ⋮
