--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
-language: java 
+language: python
 dist: trusty
 addons:
   chrome: stable
 before_install:
   - # start your web application and listen on `localhost`
-  - "wget http://selenium-release.storage.googleapis.com/2.45/selenium-server-standalone-2.45.0.jar" - # download selenium-server
-  - "wget %url_of_your_lib% # download your framework or framework dependencies (selenium libs, etc.)
-  - "java -jar selenium-server-standalone-2.45.0.jar > /dev/null 2>/dev/null &" # starting selenium-server
-  - sleep 20 # gives enough time to Selenium to start
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   ⋮
+  - pip install selenium
