--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ before_install:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   ⋮
   - pip install selenium
+script:
+$python test.py
