--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
   ⋮
   - pip install selenium
   - wget https://chromedriver.storage.googleapis.com/80.0.3987.106/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.9/
+  - unzip chromedriver_linux64.zip -d test/driver/
   - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 
 script:
+cd test
 - pytest
