--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 
 script:
-- cd test
+- cd home/travis/virtualenv/python2.7.9/
 - pytest
